--- a/webapps/ROOT/WEB-INF/classes/templates/modules/content/edit_article.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/content/edit_article.html
@@ -25,7 +25,6 @@
                     <el-col :span="24">
                         <el-form-item prop="newsTitle" label="文章标题" style="margin:0;">
                             <el-input
-                            maxlength="36"
                             clearable
                             type="text"
                             v-model="articleForm.newsTitle"
@@ -121,6 +120,55 @@
                     </el-col>
                 </el-row>
                 <el-row class="el-row-h70">
+                    <el-col :span="12">
+                        <el-form-item label="作者" prop="newsAuthor" label-width="24%" style="margin:0;">
+                            <el-input
+                                maxlength="20"
+                                type="text"
+                                placeholder="输入作者姓名，根据规定请统一姓名"
+                                v-model="articleForm.newsAuthor"
+                                auto-complete="off">
+                            </el-input>
+                        </el-form-item>
+                    </el-col>
+                    <el-col :span="12">
+                        <el-form-item label="主频道" prop="newsChannel" label-width="24%" style="margin:0;">
+                            <el-select v-model="articleForm.newsChannel" placeholder="请选择主频道" style="width:100%;">
+                                <el-option
+                                    v-for="item in channelOptions"
+                                    :key="item.channelId"
+                                    :label="item.channelTitle"
+                                    :value="item.channelId">
+                                </el-option>
+                            </el-select>
+                        </el-form-item>
+                    </el-col>
+                </el-row>
+                <el-row class="el-row-h70">
+                    <el-col :span="12">
+                        <el-form-item label="编辑姓名" prop="newsEditorName" label-width="24%" style="margin:0;">
+                            <el-input
+                                maxlength="20"
+                                type="text"
+                                placeholder="输入文章编辑姓名，根据规定请统一姓名"
+                                v-model="articleForm.newsEditorName"
+                                auto-complete="off">
+                            </el-input>
+                        </el-form-item>
+                    </el-col>
+                    <el-col :span="12">
+                        <el-form-item label="列表标签文案" prop="newsLabels" label-width="24%" style="margin:0;">
+                            <el-input
+                                maxlength="5"
+                                type="text"
+                                placeholder="输入文章标签，最多5个字"
+                                v-model="articleForm.newsLabels"
+                                auto-complete="off">
+                            </el-input>
+                        </el-form-item>
+                    </el-col>
+                </el-row>
+                <el-row class="el-row-h70">
                     <el-col :span="8">
                         <el-form-item prop="newsFrom" label="来源名称" label-width="36%" style="margin:0;">
                             <el-input
@@ -151,56 +199,7 @@
                         </el-form-item>
                     </el-col>
                 </el-row>
-                <el-row class="el-row-h70">
-                    <el-col :span="12">
-                        <el-form-item label="作者" prop="newsAuthor" label-width="24%" style="margin:0;">
-                            <el-input
-                                maxlength="20"
-                                type="text"
-                                placeholder="输入作者姓名，根据规定请统一姓名"
-                                v-model="articleForm.newsAuthor"
-                                auto-complete="off">
-                            </el-input>
-                        </el-form-item>
-                    </el-col>
-                    <el-col :span="12">
-                        <el-form-item label="发布时间" prop="newsModTime" label-width="24%" style="margin:0;">
-                            <el-date-picker
-                                style="width:100%;"
-                                v-model="articleForm.newsModTime"
-                                type="datetime"
-                                placeholder=""
-                                :disabled="true">
-                            </el-date-picker>
-                        </el-form-item>
-                    </el-col>
-                </el-row>
-                <el-row class="el-row-h70">
-                    <el-col :span="12">
-                        <el-form-item label="主频道" prop="newsChannel" label-width="24%" style="margin:0;">
-                            <el-select v-model="articleForm.newsChannel" placeholder="请选择主频道" style="width:100%;">
-                                <el-option
-                                    v-for="item in channelOptions"
-                                    :key="item.channelId"
-                                    :label="item.channelTitle"
-                                    :value="item.channelId">
-                                </el-option>
-                            </el-select>
-                        </el-form-item>
-                    </el-col>
-                    <el-col :span="12">
-                        <el-form-item label="专栏" prop="newsColumn" label-width="24%" style="margin:0;">
-                            <el-select v-model="articleForm.newsColumn" placeholder="请选择专栏" style="width:100%;" clearable>
-                                <el-option
-                                    v-for="item in columnOptions"
-                                    :key="item.columnId"
-                                    :label="item.columnTitle"
-                                    :value="item.columnId">
-                                </el-option>
-                            </el-select>
-                        </el-form-item>
-                    </el-col>
-                </el-row>
+                
                 <el-row class="el-row-h150">
                     <el-col :span="12">
                         <el-form-item label="封面图片" prop="newsHeadPic" label-width="24%" style="margin:0;">
@@ -212,20 +211,66 @@
                         </el-form-item>
                     </el-col>
                 </el-row>
+
+                <!--富文本编辑器-->
+                <div class="editor_zone">
+                    <script id="editor" type="text/plain" style="width:100%;height:500px;"></script>
+                </div>
+                <!--
+                    新闻状态为已上线，不能显示定时器 newsStatus = 2
+                -->
+                <el-row class="el-row-h60" style="margin-top:30px;" v-if="articleForm.newsStatus !== 2">
+                    <el-col :span="10">
+                        <el-form-item label="发布时间" prop="newsCompTime" label-width="25%" style="margin:0;">
+                            <el-date-picker
+                                style="width:100%;"
+                                v-model="articleForm.newsCompTime"
+                                type="datetime"
+                                value-format="timestamp"
+                                placeholder=""
+                                :disabled="!ifReserveTime">
+                            </el-date-picker>
+                        </el-form-item>
+                    </el-col>
+                    <el-col :span="6">
+                        <el-form-item prop="newsCompDelay" label="定时发布" label-width="50%" style="margin:0;">
+                            <el-checkbox v-model="ifReserveTime"></el-checkbox>
+                        </el-form-item>
+                    </el-col>
+                    <el-col :span="10">
+                        <el-form-item label="发布时间" prop="newsCompTime" label-width="25%" style="margin:0;">
+                            <el-date-picker
+                                style="width:100%;"
+                                v-model="articleForm.newsCompTime"
+                                type="datetime"
+                                value-format="timestamp"
+                                placeholder=""
+                                :disabled="true">
+                            </el-date-picker>
+                        </el-form-item>
+                    </el-col>
+                    <el-col :span="3" :offset="1" class="el-row-h40">
+                        <el-button type="primary" style="width:100%">取消定时</el-button>
+                    </el-col>
+                </el-row>
             </el-form>
         </div>
-        <!--富文本编辑器-->
-        <div class="editor_zone">
-            <script id="editor" type="text/plain" style="width:100%;height:500px;"></script>
-        </div>
-
+        
         <!--按钮区-->
-        <el-row class="el-row-h60" style="margin-top:20px;">
-            <el-col :span="4">
-                <el-button type="primary" style="width:100%" @click="saveArticleToDraft('articleForm',0)">保存</el-button>
+        <el-row class="el-row-h60">
+            <!--当勾选”定时任务”时发布操作按扭为:定时发布和取消
+            当未勾选”定时任务”时发布操作按扭为:保存,保存并发布,取消-->
+            <el-col :span="4" v-if="articleForm.newsCompDelay == '1'">
+                <el-button type="primary" style="width:100%" @click="combineArticleData('articleForm',2)">定时发布</el-button>
+            </el-col>
+            <el-col :span="4" v-if="articleForm.newsCompDelay == '0'">
+                <el-button type="primary" style="width:100%" @click="combineArticleData('articleForm',0)">保存</el-button>
+            </el-col>
+            <el-col :span="4" :offset="1"  v-if="articleForm.newsCompDelay == '0'">
+                <el-button type="primary" style="width:100%" @click="combineArticleData('articleForm',1)">保存并发布</el-button>
             </el-col>
             <el-col :span="4" :offset="1">
-                <el-button type="primary" style="width:100%" @click="saveArticleToDraft('articleForm',1)">保存并发布</el-button>
+                <el-button type="primary" style="width:100%" @click="previewArticle('articleForm')">文章预览</el-button>
             </el-col>
             <el-col :span="4" :offset="1">
                 <el-button type="primary" style="width:100%" @click="closeAndBack()">取消</el-button>
@@ -233,8 +278,8 @@
         </el-row>
         
         <!--封面图库弹出层开始-->
-        <el-dialog title="封面图库" :visible.sync="showCoverimgLib" width="100%" :fullscreen="true" :show-close="false">
-            <el-form :model="searchCoverimgForm" status-icon class="demo-ruleForm" label-width="20%" label-position="right">
+        <el-dialog title="封面图库" :visible.sync="showCoverimgLib" width="100%" :fullscreen="true" :show-close="false" >
+            <el-form :model="searchCoverimgForm" status-icon class="demo-ruleForm" label-width="20%" label-position="right" @submit.native.prevent>
                 <el-row class="el-row-h60">
                     <el-col :span="16">
                         <el-form-item label="图片名称" style="margin:0;">
@@ -283,7 +328,7 @@
 
         <!--内容图弹出层开始-->
         <el-dialog title="内容图库" :visible.sync="showContentimgLib" width="100%" :fullscreen="true" :show-close="false">
-            <el-form :model="searchContentimgForm" status-icon class="demo-ruleForm" label-width="20%" label-position="right">
+            <el-form :model="searchContentimgForm" status-icon class="demo-ruleForm" label-width="20%" label-position="right" @submit.native.prevent>
                 <el-row class="el-row-h60">
                     <el-col :span="11">
                         <el-form-item label="图片名称" style="margin:0;">
@@ -382,6 +427,9 @@
     width: 240px;
     height: 150px;
     display: block;
+}
+.editor_zone{
+    margin-top: 40px;
 }
 </style>
 </html>
