--- a/webapps/ROOT/WEB-INF/classes/templates/modules/content/edit_article.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/content/edit_article.html
@@ -291,7 +291,7 @@
                         </el-form-item>
                     </el-col>
                     <el-col :span="3" :offset="1" class="el-row-h40">
-                        <el-button type="primary" icon="el-icon-search" style="width:100%" @click="searchCoverImg()">搜索</el-button>
+                        <el-button type="primary" icon="el-icon-search" style="width:100%" @click="searchCoverImg(0)">搜索</el-button>
                     </el-col>
                     <el-col :span="3" :offset="1" class="el-row-h40">
                         <el-button type="primary" style="width:100%" @click="backToEdit()">返回</el-button>
@@ -340,7 +340,7 @@
                         </el-form-item>
                     </el-col>
                     <el-col :span="3" :offset="1" class="el-row-h40">
-                        <el-button type="primary" icon="el-icon-search" style="width:100%" @click="searchContentImg()">搜索</el-button>
+                        <el-button type="primary" icon="el-icon-search" style="width:100%" @click="searchContentImg(0)">搜索</el-button>
                     </el-col>
                     <el-col :span="4" :offset="1" class="el-row-h40">
                         <el-button type="primary" icon="el-icon-plus" style="width:100%" @click="addChooseImg">添加选中</el-button>
