--- a/webapps/ROOT/WEB-INF/classes/templates/modules/content/edit_report.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/content/edit_report.html
@@ -149,21 +149,8 @@
                     </el-col>
                     <el-col :span="12">
                         <el-form-item label="文件上传" prop="" label-width="20%" style="margin:0;">
-                            <!-- <el-upload
-                            class="upload-demo"
-                            :auto-upload="false"
-                            :show-file-list="ifShowFileList"
-                            accept="application/pdf"
-                            :file-list="fileList"
-                            :limit = "1"
-                            action="https://jsonplaceholder.typicode.com/posts/"
-                            :on-remove="handleRemove"
-                            :on-change="handleChange">
-                                <el-button size="small" type="primary">点击上传</el-button>
-                                <div slot="tip" class="el-upload__tip">只能上传pdf格式的文件</div>
-                            </el-upload> -->
                             <el-upload
-                            v-show="reportForm.reportAttachments == ''"
+                            v-show="reportForm.reportAttachments == '' || reportForm.reportAttachments == ' '"
                             ref="upload"
                             class="upload-demo"
                             :auto-upload="false"
@@ -177,7 +164,7 @@
                                 <el-button size="small" type="primary">点击上传</el-button>
                                 <div slot="tip" class="el-upload__tip">只能上传pdf格式的文件</div>
                             </el-upload>
-                            <el-button size="small" type="primary" v-show="reportForm.reportAttachments !== ''" @click="deletReportPdf">删除文件</el-button>
+                            <el-button size="small" type="primary" v-show="reportForm.reportAttachments !== '' && reportForm.reportAttachments !== ' '" @click="deletReportPdf">删除文件</el-button>
                             <el-row class="reporturl" v-text="reportForm.reportAttachments"></el-row>
                         </el-form-item>
                     </el-col>
