--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/meeting_list.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/meeting_list.html
@@ -66,8 +66,15 @@
         <!--表格查询结果区-->
         <div class="cv_content_square">
             <el-table :data="tableData" style="width: 100%; margin:10px auto;" stripe>
-                <el-table-column prop="meetingTitle" label="会议标题" width="90"></el-table-column>
-                <el-table-column prop="meetingType" label="会议类型"  width="90">
+                <el-table-column prop="meetingTitle" label="会议标题" width=""></el-table-column>
+                <el-table-column prop="meetingType" label="会议类型"  width="120">
+                    <template slot-scope="scope" v-if="scope.row.meetingType !== ''">
+                        <el-tag v-if="scope.row.meetingType == 0">Vtalk沙龙</el-tag>
+                        <el-tag v-if="scope.row.meetingType == 1">投中年会</el-tag>
+                        <el-tag v-if="scope.row.meetingType == 2">投中合作会议</el-tag>
+                        <el-tag v-if="scope.row.meetingType == 3">行业会议</el-tag>
+                        <el-tag v-if="scope.row.meetingType == 4">创新经济峰会</el-tag>
+                    </template>
                 </el-table-column>
                 <el-table-column prop="meetingImg" label="封面图"  width="180">
                     <template v-if="scope.row.meetingImg !== ''" slot-scope="scope">
@@ -77,7 +84,7 @@
                 <el-table-column prop="meetingModTime" label="发布时间" width="100"></el-table-column>
                 <el-table-column prop="meetingStarTime" label="开始时间" width="100"></el-table-column>
                 <el-table-column prop="meetingEndTime" label="结束时间" width="100"></el-table-column>
-                <el-table-column prop="meetingCrtUserName" label="创建人"></el-table-column>
+                <el-table-column prop="meetingCrtUserName" label="创建人" width="90"></el-table-column>
                 <el-table-column prop="meetingStatus" label="发布状态"  width="110">
                     <!--1：发布(上线) 2：不发布(下线) 3：待发布(草稿) 4删除-->
                     <template slot-scope="scope" v-if="scope.row.meetingStatus !== ''">
@@ -88,9 +95,9 @@
                     </template>
                 </el-table-column>
                 <el-table-column label="操作" width="200" fixed="right">
-                    <template slot-scope="scope" v-if="scope.row.meetingStatus !== 1 && scope.row.meetingStatus !== 4">
+                    <template slot-scope="scope">
                         <el-button type="text" size="small" @click="editThisMeeting(scope.row)">编辑</el-button>
-                        <el-button type="text" size="small" @click="deleteThisMeeting(scope.row)">删除</el-button>
+                        <el-button type="text" size="small" v-if="scope.row.meetingStatus !== 1" @click="deleteThisMeeting(scope.row)">删除</el-button>
                         <el-button type="text" v-if="scope.row.meetingStatus !== 1" size="small" @click="onlineThisMeeting(scope.row)">发布</el-button>
                         <el-button type="text" size="small" v-if="scope.row.meetingStatus == 1" @click="offlineThisMeeting(scope.row)">下线</el-button>
                     </template>
