--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/meeting_list.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/meeting_list.html
@@ -81,7 +81,7 @@
                         <img style="width:160px;height:100px;" :src="scope.row.meetingImg">
                     </template>
                 </el-table-column>
-                <el-table-column prop="meetingModTime" label="发布时间" width="100"></el-table-column>
+                <el-table-column prop="meetingModTime" label="修改时间" width="100"></el-table-column>
                 <el-table-column prop="meetingStarTime" label="开始时间" width="100"></el-table-column>
                 <el-table-column prop="meetingEndTime" label="结束时间" width="100"></el-table-column>
                 <el-table-column prop="meetingCrtUserName" label="创建人" width="90"></el-table-column>
