--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/meeting_list.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/meeting_list.html
@@ -66,7 +66,11 @@
         <!--表格查询结果区-->
         <div class="cv_content_square">
             <el-table :data="tableData" style="width: 100%; margin:10px auto;" stripe>
-                <el-table-column prop="meetingTitle" label="会议标题" width=""></el-table-column>
+                <el-table-column prop="meetingTitle" label="会议标题" width="">
+                    <template v-if="scope.row.meetingTitle" slot-scope="scope">
+                        <div v-text="scope.row.meetingTitle" @click="openUrlPage(scope.row.meetingUrl)"></div>
+                    </template>
+                </el-table-column>
                 <el-table-column prop="meetingType" label="会议类型"  width="120">
                     <template slot-scope="scope" v-if="scope.row.meetingType !== ''">
                         <el-tag v-if="scope.row.meetingType == 0">Vtalk沙龙</el-tag>
