--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/vtalk_list.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/vtalk_list.html
@@ -52,12 +52,17 @@
         <!--表格查询结果区-->
         <div class="cv_content_square">
             <el-table :data="tableData" style="width: 100%; margin:10px auto;" stripe>
-                <el-table-column prop="talkTitle" label="Vtalk标题" width=""></el-table-column>
+                <el-table-column prop="talkTitle" label="Vtalk标题" width="">
+                    <template v-if="scope.row.talkTitle" slot-scope="scope">
+                        <div v-text="scope.row.talkTitle" @click="openUrlPage(scope.row.talkLink)"></div>
+                    </template>
+                </el-table-column>
                 <el-table-column prop="talkImg" label="封面图"  width="180">
                     <template v-if="scope.row.talkImg !== ''" slot-scope="scope">
                         <img style="width:160px;height:100px;" :src="scope.row.talkImg">
                     </template>
                 </el-table-column>
+                <el-table-column prop="talkPriority" label="权重" width="90"></el-table-column>
                 <el-table-column prop="userName" label="创建人" width="90"></el-table-column>
                 <el-table-column prop="talkStatus" label="状态"  width="110">
                     <!--0 上线 1下线 2删除-->
@@ -68,7 +73,6 @@
                     </template>
                 </el-table-column>
                 <el-table-column prop="talkCrtTime" label="创建时间" width="100"></el-table-column>
-                <el-table-column prop="talkReleaseTime" label="发布时间" width="100"></el-table-column>
                 <el-table-column label="操作" width="200" fixed="right">
                     <template slot-scope="scope">
                         <el-button type="text" size="small" @click="creatOrEdit('edit',scope.row)">编辑</el-button>
@@ -93,7 +97,7 @@
 
 
         <!--新建或修改内容弹出层开始-->
-        <el-dialog :title="showCreatEditDialogTitle" :visible.sync="showCreatEditDialog" width="80%" fullscreen="true" @closed="closeVtalkForm('creatEditForm')">
+        <el-dialog :title="showCreatEditDialogTitle" :visible.sync="showCreatEditDialog" width="80%" :fullscreen="true" @closed="closeVtalkForm('creatEditForm')">
             <el-form :model="creatEditForm" :rules="creatEditFormRules" ref="creatEditForm" status-icon class="demo-ruleForm" label-width="15%" label-position="right">
                 <el-row class="el-row-h70">
                     <el-col :span="24">
