--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/vtalk_list.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/vtalk_list.html
@@ -158,6 +158,7 @@
                         <el-form-item label="权重" prop="talkPriority" style="margin:0;">
                             <el-input
                                 clearable
+                                maxlength="3"
                                 type="text"
                                 v-model="creatEditForm.talkPriority"
                                 auto-complete="off"></el-input>
