--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/vtalk_list.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/vtalk_list.html
@@ -138,6 +138,19 @@
                         </el-form-item>
                     </el-col>
                 </el-row>
+                <el-row class="el-row-h70">
+                    <el-col :span="24">
+                        <el-form-item label="发布时间" prop="talkDate" style="margin:0;">
+                            <el-date-picker
+                                style="width:100%;"
+                                v-model="creatEditForm.talkDate"
+                                type="datetime"
+                                value-format="timestamp"
+                                placeholder="请填写VTalk发布时间">
+                            </el-date-picker>
+                        </el-form-item>
+                    </el-col>
+                </el-row>
                 <el-row class="el-row-h80">
                     <el-col :span="24">
                         <el-form-item label="标签" prop="talkLabel" style="margin:0;">
