--- a/webapps/ROOT/WEB-INF/classes/templates/modules/content/edit_report.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/content/edit_report.html
@@ -18,6 +18,7 @@
     <#include "/header.html">
     <div class="cvpage_title_common">新建/编辑报告</div>
     <div id="edit_report" class="cv_page_content">
+        <div class="loading" v-if="!ajaxController"></div>
         <!--报告基本信息区-->
         <div class="cv_content_square">
             <el-form :model="reportForm" :rules="reportFormRules" ref="reportForm" status-icon class="demo-ruleForm" label-width="10%" label-position="right">
@@ -301,6 +302,15 @@
 <script type="text/javascript" src="${request.contextPath}/statics/js/clockToast.js"></script>
 
 <style>
+.loading{
+    position: fixed;
+    top: 0;
+    bottom:0;
+    right: 0;
+    left: 0;
+    background: rgba(255,255,255,0.4);
+    z-index: 999;
+}
 .fengmian_show{
     width: 240px;
     height: 150px;
